--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 dist: trusty
-install: gem install rubocop
+install: gem install rubocop goodcop
 script: rubocop -D
 notifications:
   email: false
